--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
                                                             <span class="w-100">
                                                                 <div style="gap: 1rem; color: var(--bs-azul-escuro);" class="d-flex justify-content-evenly flex-column">
                                                                     <!--Questões 01-->
-                                                                        <span style="gap: 0.5rem;" class="w-50 d-flex align-items-center" onclick="mostrarPopup('popup4')">
+                                                                        <span style="gap: 0.5rem; cursor: pointer;" class="w-50 d-flex align-items-center" onclick="mostrarPopup('popup4')">
                                                                             <img class="w-75" src="./img/icons/Questão04.png" alt="Questão 04">
                                                                             <h4>Apresentações inesperadas</h4>
                                                                         </span>
@@ -539,16 +539,54 @@
                                                                         </div>
                                                                     <!--Questões 01-->
                                                                     <!--Questões 02-->
-                                                                    <span style="gap: 0.5rem;" class="w-50 d-flex align-items-center">
+                                                                    <span style="gap: 0.5rem; cursor: pointer;" class="w-50 d-flex align-items-center" onclick="mostrarPopup('popup4')">
                                                                         <img class="w-75" src="./img/icons/Questão04.png" alt="Questão 02">
                                                                         <h4>Lidando com feedbacks construtivos</h4>
                                                                     </span>
+                                                                        
+                                                                    <div id="popup4"  class="popup-overlay" onclick="fecharPopup('popup4')" aria-hidden="true">
+                                                                        <div class="popup-content" style="background-color: var(--bs-laranja) !important; color: var(--bs-azul-escuro) !important;" onclick="event.stopPropagation()">
+                                                                            <p><strong>Lidando com feedbacks construtivos
+                                                                                Desenvolvendo habilidades de autogestão emocional
+                                                                                </strong>
+                                                                            </p>
+                                                                            <p><strong>Instruções:</strong>
+                                                                                Pense em estratégias que você pode adotar para controlar o nervosismo e a insegurança. Considere, como revisar o material, uma preparação adicional, além do apoio de colegas podem ajudar a gerenciar melhor as emoções e alcançar um desempenho satisfatório. Clique em Feedback quando finalizar.
+                                                                            </p>
+                                                                            <p><strong>Pergunta:</strong>
+                                                                                Você foi informado de que terá que substituir, por motivos de saúde, seu colega de grupo em uma apresentação para o dia seguinte, e isso gera nervosismo e insegurança. Como gerenciar suas emoções para realizar a apresentação de maneira eficaz?
+                                                                            </p>
+                                                                            <textarea id="input-text4" oninput="checkInput('input-text4', 'btn-container4')" placeholder="Digite algo..."></textarea> 
+                                                                            <div class="btn-container justify-content-center align-items-center" id="btn-container4" style="visibility: hidden;">
+                                                                                <button class="btn btn-primary" style="padding: 0.5rem 1rem !important;" onclick="enviarTexto('input-text4', 'popup4', 'Para gerenciar suas emoções em uma situação inesperada como essa, uma boa estratégia é revisar detalhadamente a apresentação e praticar com colegas, o que pode ajudar a ganhar confiança. A autogestão emocional envolve não apenas lidar com o nervosismo, mas também adotar ações práticas, como buscar apoio de pessoas próximas ou conversar com seu professor, a fim de garantir uma apresentação bem-sucedida.')">Enviar</button>
+                                                                            </div>
+                                                                        </div>
+                                                                    </div>
                                                                     <!--Questões 02-->
                                                                     <!--Questões 03-->
-                                                                    <span style="gap: 0.5rem;" class="w-50 d-flex align-items-center">
+                                                                    <span style="gap: 0.5rem; cursor: pointer;" class="w-50 d-flex align-items-center" onclick="mostrarPopup('popup4')">
                                                                         <img class="w-75" src="./img/icons/Questão04.png" alt="Questão 03">
                                                                         <h4>Desenvolvendo habilidades de autogestão emocional</h4>
                                                                     </span>
+                                                                        
+                                                                    <div id="popup4"  class="popup-overlay" onclick="fecharPopup('popup4')" aria-hidden="true">
+                                                                        <div class="popup-content" style="background-color: var(--bs-laranja) !important; color: var(--bs-azul-escuro) !important;" onclick="event.stopPropagation()">
+                                                                            <p><strong>Lidando com feedbacks construtivos
+                                                                                Desenvolvendo habilidades de autogestão emocional
+                                                                                </strong>
+                                                                            </p>
+                                                                            <p><strong>Instruções:</strong>
+                                                                                Pense em estratégias que você pode adotar para controlar o nervosismo e a insegurança. Considere, como revisar o material, uma preparação adicional, além do apoio de colegas podem ajudar a gerenciar melhor as emoções e alcançar um desempenho satisfatório. Clique em Feedback quando finalizar.
+                                                                            </p>
+                                                                            <p><strong>Pergunta:</strong>
+                                                                                Você foi informado de que terá que substituir, por motivos de saúde, seu colega de grupo em uma apresentação para o dia seguinte, e isso gera nervosismo e insegurança. Como gerenciar suas emoções para realizar a apresentação de maneira eficaz?
+                                                                            </p>
+                                                                            <textarea id="input-text4" oninput="checkInput('input-text4', 'btn-container4')" placeholder="Digite algo..."></textarea> 
+                                                                            <div class="btn-container justify-content-center align-items-center" id="btn-container4" style="visibility: hidden;">
+                                                                                <button class="btn btn-primary" style="padding: 0.5rem 1rem !important;" onclick="enviarTexto('input-text4', 'popup4', 'Para gerenciar suas emoções em uma situação inesperada como essa, uma boa estratégia é revisar detalhadamente a apresentação e praticar com colegas, o que pode ajudar a ganhar confiança. A autogestão emocional envolve não apenas lidar com o nervosismo, mas também adotar ações práticas, como buscar apoio de pessoas próximas ou conversar com seu professor, a fim de garantir uma apresentação bem-sucedida.')">Enviar</button>
+                                                                            </div>
+                                                                        </div>
+                                                                    </div>
                                                                     <!--Questões 03-->
                                                                 </div>
                                                             </span>    
