--- a/index.html
+++ b/index.html
@@ -563,21 +563,20 @@
                                                                         <img class="w-75" src="./img/icons/Questão04.png" alt="Questão 03">
                                                                         <h4>Desenvolvendo habilidades de autogestão emocional</h4>
                                                                     </span>
-                                                                        
                                                                     <div id="popup6"  class="popup-overlay" onclick="fecharPopup('popup6')" aria-hidden="true">
                                                                         <div class="popup-content" style="background-color: var(--bs-laranja) !important; color: var(--bs-azul-escuro) !important;" onclick="event.stopPropagation()">
-                                                                            <p><strong>Apresentações inesperadas
+                                                                            <p><strong>Desenvolvendo habilidades de autogestão emocional
                                                                                 </strong>
                                                                             </p>
                                                                             <p><strong>Instruções:</strong>
-                                                                                Pense em estratégias que você pode adotar para controlar o nervosismo e a insegurança. Considere, como revisar o material, uma preparação adicional, além do apoio de colegas podem ajudar a gerenciar melhor as emoções e alcançar um desempenho satisfatório. Clique em Feedback quando finalizar.
+                                                                                Considere práticas que você pode adotar para gerenciar suas emoções, como identificar seus sentimentos, refletir sobre seus gatilhos emocionais e usar técnicas como respiração controlada. Pense também sobre a importância de buscar apoio de colegas, amigos ou até de um profissional. Clique em Feedback quando finalizar.
                                                                             </p>
                                                                             <p><strong>Pergunta:</strong>
-                                                                                Você foi informado de que terá que substituir, por motivos de saúde, seu colega de grupo em uma apresentação para o dia seguinte, e isso gera nervosismo e insegurança. Como gerenciar suas emoções para realizar a apresentação de maneira eficaz?
+                                                                                Você está enfrentando uma situação desafiadora pessoal e suas emoções estão descontroladas. O que você pode fazer para melhorar a autogestão emocional e lidar com a situação de maneira mais eficaz?
                                                                             </p>
                                                                             <textarea id="input-text6" oninput="checkInput('input-text6', 'btn-container6')" placeholder="Digite algo..."></textarea> 
                                                                             <div class="btn-container justify-content-center align-items-center" id="btn-container6" style="visibility: hidden;">
-                                                                                <button class="btn btn-primary" style="padding: 0.5rem 1rem !important;" onclick="enviarTexto('input-text6', 'popup6', 'Para gerenciar suas emoções em uma situação inesperada como essa, uma boa estratégia é revisar detalhadamente a apresentação e praticar com colegas, o que pode ajudar a ganhar confiança. A autogestão emocional envolve não apenas lidar com o nervosismo, mas também adotar ações práticas, como buscar apoio de pessoas próximas ou conversar com seu professor, a fim de garantir uma apresentação bem-sucedida.')">Enviar</button>
+                                                                                <button class="btn btn-primary" style="padding: 0.5rem 1rem !important;" onclick="enviarTexto('input-text6', 'popup6', 'Melhorar a autogestão emocional envolve a identificação das suas emoções, a reflexão sobre os gatilhos que as causam e a prática de estratégias como respiração controlada e empatia. Estas habilidades ajudam a lidar melhor com o estresse, promovendo decisões mais equilibradas e relações mais saudáveis. Além disso, buscar apoio de pessoas de confiança ou de um terapeuta pode ser essencial para lidar com situações emocionais intensas de forma construtiva.')">Enviar</button>
                                                                             </div>
                                                                         </div>
                                                                     </div>
