--- a/index.html
+++ b/index.html
@@ -716,7 +716,11 @@
                                                 <p>Os dois exemplos a seguir são situações que demandam comportamentos e atitudes resilientes e adaptáveis. Clique nas imagens abaixo para verificar as situações e as atitudes empregadas para que os problemas fossem solucionados.</p>
                                                     <br>
                                                 <span class="d-flex justify-content-center align-items-center flex-column">
-                                                    <img style="width: 35% !important;" class="w-25" src="./img/icons/situação 01.png" alt="Situação 01">
+                                                    <span style="cursor: pointer;" onclick="mostrarPopup2()">
+                                                        <img style="width: 65% !important;" class="w-50" src="./img/icons/situacao01.webp" alt="Situação01">
+                                                    </span>
+
+
                                                     <img style="width: 35% !important;" class="w-25" src="./img/icons/situação 02.png" alt="Situação 02">
                                                 </span>
                                                     <br>
