--- a/index.html
+++ b/index.html
@@ -719,9 +719,9 @@
                                                     <span style="cursor: pointer;" onclick="mostrarPopup2()">
                                                         <img style="width: 65% !important;" class="w-50" src="./img/icons/situacao01.webp" alt="Situação01">
                                                     </span>
-
-
-                                                    <img style="width: 35% !important;" class="w-25" src="./img/icons/situação 02.png" alt="Situação 02">
+                                                    <span style="cursor: pointer;" onclick="mostrarPopup3()">
+                                                        <img style="width: 65% !important;" class="w-50" src="./img/icons/situação 02.png" alt="Situação01">
+                                                    </span>
                                                 </span>
                                                     <br>
                                                 <p>Estes exemplos mostram como tais comportamentos e atitudes são importantes em e para nossas vidas. </p>
