--- a/index.html
+++ b/index.html
@@ -797,11 +797,19 @@
                                               </div>
                                               <div class="carousel-item w-75">
                                                 <span class="w-100 ">
-                                                    <span style="gap: .5rem;" class="w-25 d-flex align-items-center">
-                                                        <img class="w-100" src="./img/icons/REA_p7_1.png" alt="Icon01">
-                                                        <img class="w-100" src="./img/icons/REA_p7_2.png" alt="Icon02">
-                                                        <img class="w-100" src="./img/icons/REA_p7_3.png" alt="Icon03">
-                                                        <img class="w-100" src="./img/icons/REA_p7_4.png" alt="Icon04">
+                                                    <span style="gap: .5rem;" class="w-100 d-flex align-items-center">
+                                                        <span style="cursor: pointer;" onclick="mostrarPopup4()">
+                                                            <img class="w-100" src="./img/icons/REA_p7_1.png" alt="Icon01">
+                                                        </span>
+                                                        <span style="cursor: pointer;" onclick="mostrarPopup5()">
+                                                            <img class="w-100" src="./img/icons/REA_p7_2.png" alt="Icon02">
+                                                        </span>
+                                                        <span style="cursor: pointer;" onclick="mostrarPopup6()">
+                                                            <img class="w-100" src="./img/icons/REA_p7_3.png" alt="Icon03">
+                                                        </span>
+                                                        <span style="cursor: pointer;" onclick="mostrarPopup7()">
+                                                            <img class="w-100" src="./img/icons/REA_p7_4.png" alt="Icon04">
+                                                        </span>
                                                     </span>
                                                         <br>
                                                     <span style="gap: .5rem;" class="w-25 d-flex align-items-center"> 
