--- a/index.html
+++ b/index.html
@@ -812,10 +812,10 @@
                                                         </span>
                                                     </span>
                                                         <br>
-                                                    <span style="gap: .5rem;" class="w-25 d-flex align-items-center"> 
-                                                        <img class="w-100" src="./img/icons/REA_p7_5.png" alt="Icon05">  
-                                                        <br>     
-                                                        <img class="w-100" src="./img/icons/REA_p7_6.png" alt="Icon06">
+                                                    <span style="gap: .5rem;" class="w-25 d-flex align-items-center">
+                                                        <span style="cursor: pointer;" onclick="mostrarPopup8()"> 
+                                                            <img class="w-100" src="./img/icons/REA_p7_5.png" alt="Icon05"> 
+                                                        </span> 
                                                     </span>
                                                 </span>
                                               </div>
