--- a/index.html
+++ b/index.html
@@ -680,6 +680,135 @@
             </section>
         <!--Container 06-->
         <!--Container 07-->
+            <section style="background: var(--bs-azul-claro);" class="container-xxl p-3">
+                <article class="w-100 d-flex justify-content-center align-items-center">
+                    <div style="color: var(--bs-azul-escuro) !important;" class="w-100 d-flex flex-column justify-content-evenly align-items-center">
+                        <!--Titulo-->
+                            <span style="font-family: OpenSans-Light; font-size: 1.5rem; text-align: center;">
+                                <h4>Vamos fazer um exercício para testar sua compreensão sobre resiliência e adaptabilidade.</h4>
+                                <br>
+                                <p style="font-size: 1.2rem;"><strong style="font-family: OpenSans-bold;">Instruções:</strong> Relacione a alternativa correta da direita com o que se pergunta no enunciado na esquerda. Arraste a</p>
+                                <p style="font-size: 1.2rem;">alternativa no espaço indicado “Insira aqui sua resposta”. Em seguida, aparecerar um pop-up para verificar a </p>
+                                <p style="font-size: 1.2rem;">alternativa correta e uma breve explicação.</p>
+                            </span>
+                        <!--Titulo-->
+                        <br>
+                        <!--Carrossel Atividade-->   
+                        <div id="carouselCustom" class="carousel slide" >
+                            <div class="carousel-inner">
+                            <!--Questão01-->
+                            <div class="carousel-item active">
+                                <div style="font-family: OpenSans-bold; font-size: 1.3rem !important; text-align: center;">
+                                        <p>1 )<strong> O que é coragem?</strong>Coragem não está relacionada apenas à ausência de medo, mas à forma como enfrentamos desafios. Como você entende a relação entre coragem e adversidade?</p>
+                                </div>
+                                    <br>
+                                <div class="w-100">
+                                    <div>
+                                        <!--Questão-->
+                                            <div class="d-flex justify-content-end align-items-center">
+                                                <span style="font-family: OpenSans-Light; font-size: 1.1rem;" class="w-50 d-flex justify-content-center align-items-center flex-column">
+                                                    <div id="drag1" class="draggable" draggable="true">a) Coragem é agir sem se importar com os riscos envolvidos</div>
+                                                    <br>
+                                                    <div id="drag2" class="draggable" draggable="true">b) Coragem é agir com confiança, sem nunca duvidar de si mesmo.</div>
+                                                    <br>
+                                                    <div id="drag3" class="draggable" draggable="true">c) Coragem envolve tomar decisões difíceis, mesmo quando sentimos medo ou insegurança.</div>
+                                                    <br>
+                                                    <div id="drag4" class="draggable" draggable="true">d) Coragem é sempre evitar problemas e seguir o caminho mais seguro.</div>
+                                                    <br>
+                                                    <div id="drag5" class="draggable" draggable="true">e) Coragem é enfrentar desafios apenas quando estamos preparados para eles.</div>
+                                                </span>
+                                                <span class="w-50 d-flex justify-content-center align-items-center flex-column">
+                                                    <img style="width: 45% !important;" class="w-25" src="./img/icons/AL1541271.jpg" alt="">
+                                                    <br>
+                                                    <p>Solte aqui</p>
+                                                    <br>
+                                                    <div class="container" id="dropzone"></div>
+                                                    <br>
+                                                </span>
+                                            </div>
+                                        <!--Questão-->    
+                                    </div>
+                                </div>
+                            </div>
+                            <!--Questão01-->  
+                            <!--Questão02-->
+                            <div class="carousel-item">
+                                <div style="font-family: OpenSans-bold; font-size: 1.3rem !important; text-align: center;">
+                                        <p>2) <strong>Comportamento corajoso</strong>Em situações que exigem coragem, a forma como reagimos pode refletir nossa capacidade de adaptação. Qual atitude reflete mais a ideia de enfrentar um desafio de forma corajosa e adaptativa?</p>
+                                </div>
+                                    <br>
+                                <div class="w-100">
+                                    <div>
+                                        <!--Questão-->
+                                            <div class="d-flex align-items-center">
+                                                <span style="font-family: OpenSans-Light; font-size: 1.1rem;" class="w-50 d-flex justify-content-center align-items-center flex-column">
+                                                    <div id="dragItem1" class="draggable02" draggable="true">a) Preferir sempre fazer o que é confortável, evitando riscos e mudanças.</div>
+                                                    <br>
+                                                    <div id="dragItem2" class="draggable02" draggable="true">b) Encarar desafios e buscar formas de superá-los, mesmo quando não temos todas as respostas.</div>
+                                                    <br>
+                                                    <div id="dragItem3" class="draggable02" draggable="true">c) Focar apenas em tarefas fáceis e previsíveis para evitar qualquer tipo de incerteza.</div>
+                                                    <br>
+                                                    <div id="dragItem4" class="draggable02" draggable="true">d) Buscar evitar qualquer forma de confronto, deixando que outros tomem as decisões difíceis.</div>
+                                                    <br>
+                                                    <div id="dragItem5" class="draggable02" draggable="true">e) Estagnar diante das dificuldades, esperando que as circunstâncias mudem sozinhas.</div>
+                                                </span>
+                                                <span class="w-50 d-flex justify-content-center align-items-center flex-column">
+                                                    <img style="width: 45% !important;" class="w-50" src="./img/icons/AL1445058.jpg" alt="">
+                                                    <br>
+                                                    <p>Solte aqui</p>
+                                                    <br>
+                                                    <div class="container02" id="dropzone2"></div>
+                                                    <br>
+                                                </span>
+                                            </div>
+                                        <!--Questão-->    
+                                    </div>
+                                </div>
+                            </div>
+                            <!--Questão02-->  
+                            <!--Questão03-->
+                            <div class="carousel-item">
+                                <div style="font-family: OpenSans-bold; font-size: 1.3rem !important; text-align: center;">
+                                        <p>3) <strong>Coragem diante das incertezas</strong> Como a coragem pode influenciar a forma como lidamos com oportunidades desafiadoras, especialmente quando a insegurança e os receios surgem?</p>
+                                </div>
+                                    <br>
+                                <div class="d-flex align-items-center">
+                                        <span style="font-family: OpenSans-Light;font-size: 1.1rem !important;" class="w-50 d-flex justify-content-center align-items-center flex-column">
+                                            <div id="dragItemA" class="draggable03" draggable="true">a) Ignorar os desafios e esperar por uma oportunidade mais fácil.</div>
+                                            <br>
+                                            <div id="dragItemB" class="draggable03" draggable="true">b) Tomar decisões com base apenas no que já se conhece, evitando riscos.</div>
+                                            <br>
+                                            <div id="dragItemC" class="draggable03" draggable="true">c) Encarar os desafios de frente, mesmo sem ter todas as respostas, buscando aprender ao longo do caminho.</div>
+                                            <br>
+                                            <div id="dragItemD" class="draggable03" draggable="true">d) Evitar novas oportunidades para não sair da zona de conforto.</div>
+                                            <br>
+                                            <div id="dragItemE" class="draggable03" draggable="true">d) Focar em evitar problemas e minimizar mudanças a todo custo</div>
+                                        </span>
+                                        <span class="w-50 d-flex justify-content-center align-items-center flex-column">
+                                            <img style="width: 45% !important;" class="w-50" src="./img/icons/AL1524000.jpg" alt="">
+                                            <br>
+                                            <p>Solte aqui</p>
+                                            <br>
+                                            <div class="container03" id="dropzone3"></div>
+                                            <br>
+                                        </span>
+                                </div>
+                            </div>
+                            <!--Questão03-->
+                            </div>
+                            <button class="carousel-control-prev" type="button" data-bs-target="#carouselCustom" data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Anterior</span>
+                            </button>
+                            <button class="carousel-control-next" type="button" data-bs-target="#carouselCustom" data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Próximo</span>
+                            </button>
+                        </div>
+                        <!--Carrossel Atividade-->
+                    </div>
+                </article>
+            </section>
         <!--Container 07-->
         <!--Container 08-->
             <section class="container-xxl">
